--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jest": "^23.6.0",
     "jest-chain": "^1.0.5",
     "jest-extended": "^0.11.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./spec/testSetup.js"
   }
 }
